# gamePrototype

./: CMakeLists.txt  conio_inc.h  main.cpp
GameInterface/: Character.h  Playground.h
TUI/: CMakeLists.txt  KeyboardInterface.cpp  KeyboardInterface.h  TUI.cpp  TUI.h  keycodes.h
